fix: overflow height and adjust project type

--- a/style.css
+++ b/style.css
@@ -12,19 +12,12 @@
 
 body {
   font-family: "Neue Montreal", sans-serif;
-}
-
-#overlay-dark {
-  position: absolute;
-  width: 100vw;
-  height: 100%;
-  background: #202020;
-  z-index: 2;
+  background-color: #202020;
 }
 
 .content {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   padding: 1em 0;
   overflow-y: auto;
 }
